--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             </p>
             <div class="social-links">
                 <a href="https://github.com/sarveshprince" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://linkedin.com/in/pranesh-j-s-136495292/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://linkedin.com/in/sarvesh-kumar-202261334/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:sarvesh.jr10@gmail.com"><i class="fas fa-envelope"></i></a>
             </div>
             <br>
-            <a href="https://drive.google.com/file/d/1IDV-1EAV8Gzlk4pMBG0oxLROlJTLhN48/view?usp=drive_link" target="_blank" class="btn">View CV</a>
+            <a href="https://drive.google.com/file/d/1IDV-1EAV8Gzlk4pMBG0oxLROlJTLhN48/view?usp=sharing" class="btn">View CV</a>
         </div>
     </section>
     <section id="education" class="education">
@@ -478,20 +478,17 @@ window.onclick = function(event) {
 </body>
 </html>
 </html>
-};
 </script>
 
 </body>
 </html>
 </html>
-    }
-};
+
 </script>
 
 </body>
 </html>
 </html>
-};
 </script>
 
 </body>
